<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/main"
    android:background="@drawable/background_visiting_card"
    android:orientation="horizontal"
    android:layout_marginTop="30dp"
    android:layout_width="400dp"
    android:layout_height="300dp"
    tools:context=".MainActivity">

    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        >
        <ImageView
            android:layout_width="150dp"
            android:layout_height="150dp"
            android:src="@drawable/myimageround"
            android:layout_marginTop="10dp"
            android:padding="20sp"
            />
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/my_name"
            android:textStyle="bold"
            android:textSize="20sp"
            android:textColor="#020B37"
            android:layout_gravity="center"
            />
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/profession"
            android:textStyle="bold"
            android:textColor="#020B37"
            android:textSize="20sp"
            android:layout_gravity="center"
            />
    </LinearLayout>
    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:layout_marginLeft="50dp">

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:layout_marginTop="40dp"
            >
            <ImageView
                android:id="@+id/ContactIcon"
                android:layout_width="20dp"
                android:layout_height="20dp"
                android:src="@drawable/phone"
                android:layout_marginLeft="5dp"
                android:layout_marginBottom="10dp"
                />
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/contact_no"
                android:textSize="10sp"
                android:textStyle="bold"
                android:textColor="#020B37"
                android:layout_marginBottom="10dp"
                android:layout_marginLeft="5dp"
                />
        </LinearLayout>

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            >
            <ImageView
                android:id="@+id/MailIcon"
                android:layout_width="20dp"
                android:layout_height="20dp"
                android:src="@drawable/gmail"
                android:layout_marginLeft="5dp"
                android:layout_marginBottom="10dp"
                />
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/gmail"
                android:textSize="10dp"
                android:textStyle="bold"
                android:textColor="#020B37"
                android:layout_marginBottom="10dp"
                android:layout_marginLeft="5dp"
                />
        </LinearLayout>
        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            >
            <ImageView
                android:id="@+id/WebsiteIcon"
                android:layout_width="20dp"
                android:layout_height="20dp"
                android:src="@drawable/internet"
                android:layout_marginLeft="5dp"
                android:layout_marginBottom="10dp"
                />
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/website"
                android:textSize="10dp"
                android:textStyle="bold"
                android:textColor="#020B37"
                android:layout_marginBottom="10dp"
                android:layout_marginLeft="5dp"
                />
        </LinearLayout>
        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            >
            <ImageView
                android:id="@+id/LocationIcon"
                android:layout_width="20dp"
                android:layout_height="20dp"
                android:src="@drawable/map"
                android:layout_marginLeft="5dp"
                android:layout_marginBottom="10dp"
                />
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/location"
                android:textSize="10dp"
                android:textStyle="bold"
                android:textColor="#020B37"
                android:layout_marginBottom="10dp"
                android:layout_marginLeft="5dp"
                />
        </LinearLayout>
        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            >
            <ImageView
                android:id="@+id/facebookIcon"
                android:layout_width="20dp"
                android:layout_height="20dp"
                android:src="@drawable/facebook"
                android:layout_marginLeft="5dp"
                android:layout_marginRight="5dp"
                />
            <ImageView
                android:id="@+id/WhatsappIcon"
                android:layout_width="20dp"
                android:layout_height="20dp"
                android:src="@drawable/whatsapp"
                android:layout_marginLeft="5dp"
                android:layout_marginRight="5dp"
                />
            <ImageView
                android:id="@+id/LinkedInIcon"
                android:layout_width="20dp"
                android:layout_height="20dp"
                android:src="@drawable/linkedin"
                android:layout_marginLeft="5dp"
                android:layout_marginRight="5dp"
                />
            <ImageView
                android:id="@+id/GitIcon"
                android:layout_width="20dp"
                android:layout_height="20dp"
                android:src="@drawable/github"
                android:layout_marginLeft="5dp"
                android:layout_marginRight="5dp"
                />
        </LinearLayout>

    </LinearLayout>




</LinearLayout>